Ignore 'Finished App--99Z-ARCHIVE*'

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ node_modules/
 .idea
 notes.md
 catch-of-the-day/package-lock\.json
+
+stepped-solutions/Finished App--99Z-ARCHIVE--Now-Deploy-MoveFrom--build-static-js/
